#6144: correct wrong paddings of richcombo in kama.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@6422 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/kama/richcombo.css
+++ b/_source/skins/kama/richcombo.css
@@ -48,6 +48,7 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	padding: 2px;
 	height: 21px;
 	margin-right: 6px;
+	margin-bottom: 5px;
 }
 
 .cke_skin_kama .cke_rtl .cke_rcombo a,
